<resources>
    <string name="app_name">TestV3</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="strCopyRight">Copyright \u00a9 2011 &#8211; 2014 Citrix Systems, Inc.\nAll Rights Reserved.</string>
    <string name="strDisplayName">displayname</string>
    <string name="strPrimaryEmail">primaryemail</string>
    <string name="strAddUser">Add User</string>
    <string name="strBasicInfo">Basic Information</string>
    <string name="strEmail">Email</string>
    <string name="strFName">First Name</string>
    <string name="strLName">Last Name</string>
    <string name="strCompany">Company</string>
    <string name="strFolderAccessPermission">Folder Access Permissions: </string>
    <string name="strDownload">Download</string>
    <string name="strUpload">Upload</string>
    <string name="strAdmin">Admin</string>
    <string name="strSendDownloadAlerts">Send Download Alerts</string>
    <string name="strSendUploadAlerts">Send Upload Alerts</string>
    <string name="strDelete">Delete</string>
    <string name="strAddUserToFolderNotice">Notify user that he/she has been added to this folder</string>
    <string name="strAllContacts">All Contacts</string>
    <string name="strDone">Done</string>
    <string name="strPersonal">Personal</string>
    <string name="strShared">Shared</string>
    <string name="strGroups">Groups</string>
    <string name="strSettings">Settings</string>
    <string name="strMenu">Menu</string>
    <string name="strMSG">MSG</string>
    <string name="strStartService">Start Service</string>
    <string name="strStopService">Stop Service</string>
    <string name="strCheckIn">Check In</string>
    <string name="strTitle">Title</string>
    <string name="strCancel">Cancel</string>
    <string name="strCreateConnector">Create Connector</string>
    <string name="strConnectorName">Connector Name</string>
    <string name="strTypeWithColon">Type: </string>
    <string name="strZoneWithColon">Zone: </string>
    <string name="strPath">Path</string>
    <string name="strUsername">UserName</string>
    <string name="strPasswd">Password</string>
    <string name="strZones">Zones</string>
    <string name="strType">Type</string>
    <string name="strFileShare">File Share</string>
    <string name="strSharepoint">Sharepoint</string>
    <string name="strCreateFolder">Create Folder</string>
    <string name="strFolderName">Folder Name</string>
    <string name="strDetailsWithColon">Details:</string>
    <string name="strDetailsWithEllipsis">Details &#8230;</string>
    <string name="strCreateNote">Create a Note</string>
    <string name="strTitleWithColon">Title:</string>
    <string name="strNoteWithColon">Note:</string>
    <string name="strUploadDest">Upload Destination</string>
    <string name="strDest">destination</string>
    <string name="strCreate">Create</string>
    <string name="strGeneralInfoWithColon">General Info:</string>
    <string name="strNameWithColon">Name: </string>
    <string name="strSizeWithColon">Size: </string>
    <string name="strPermissionsWithColon">Permissions: </string>
    <string name="strNoPermissionEditFolderUserNotice">You dont have permissions to edit users for this folder.</string>
    <string name="strRemoveFromDevice">Remove From Device</string>
    <string name="strSharefile">ShareFile</string>
    <string name="strTextView">TextView</string>
    <string name="strContinue">Continue</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strNameUppercase">NAME</string>
    <string name="strDetailsUppercase">DETAILS</string>
    <string name="strSelectPasscodeType">Select a passcode type:</string>
    <string name="strPin">PIN</string>
    <string name="strEndUserServicesAgreement">End User Services Agreement</string>
    <string name="strFileName">Filename</string>
    <string name="strDetails">Details</string>
    <string name="strPNG">PNG</string>
    <string name="strDownloadingWithEllipsis">Downloading &#8230;</string>
    <string name="strSendFile">Send File</string>
    <string name="strFolderEmpty">Folder is empty.</string>
    <string name="strSearchAllFilesWithDots">Search Files &#8230;</string>
    <string name="strFavoriteFolders">Favorite Folders</string>
    <string name="strFolderEmptyNotice">This folder is empty.</string>
    <string name="strOfflineNotice">You are currently offline</string>
    <string name="strWelcomeNotice">Welcome to ShareFile for Android!</string>
    <string name="strEnterEmailAssociateAccountNotice">Please enter the email address that is associated with your ShareFile account</string>
    <string name="strEmailAddr">Email Address</string>
    <string name="strEnterSubDomain">Enter your subdomain</string>
    <string name="strEmailAssociateMultiAccountNotice">Your email address is associated with more than one account or an account that requires a username other than your email address to log in. Please check your account email for setup instructions.</string>
    <string name="strResendInstructions">Resend instructions</string>
    <string name="strSubdomain">Subdomain</string>
    <string name="strExampleSubdomainNotice">Example: Enter mycompany if your login URL is https://mycompany.sharefile.com </string>
    <string name="strUsernameWithColon">Username:</string>
    <string name="strPasswdWithColon">Password:</string>
    <string name="strAttach">Attach</string>
    <string name="strSave">Save</string>
    <string name="strAccountLogin">Account Login</string>
    <string name="strLogin">Login</string>
    <string name="strRememberLogInfoNotice">Remember my login information.</string>
    <string name="strNoteUppercase">NOTE</string>
    <string name="strTextUppercase">TEXT</string>
    <string name="strDownloadingWithColon">Downloading:</string>
    <string name="strOfflineFiles">Offline Files</string>
    <string name="strSearch">Search</string>
    <string name="strPasscodeSettings">Passcode Settings</string>
    <string name="strTurnPasscodeOn">Turn Passcode On</string>
    <string name="strChangePasscode">Change Passcode</string>
    <string name="strPasscodeFormatNotice">A simple passcode is a 4 digit number</string>
    <string name="strPrivacyPolicy">Privacy Policy</string>
    <string name="strPullToRefresh">Pull to Refresh.</string>
    <string name="strNever">Never</string>
    <string name="strQueueEmpty">Queue is empty.</string>
    <string name="strRequestFiles">Request Files</string>
    <string name="strRequestExplainNotice">Request  allows you to send a file to a recipient that invites them to upload files to this folder.</string>
    <string name="strToMailAddr">To (email address):</string>
    <string name="strSubjectOptional">Subject (optional):</string>
    <string name="strNoteOptional">Note (optional):</string>
    <string name="strSendEmailCopy">Send me a copy of the e-mail</string>
    <string name="strRequireLogin">Require recipient to log in</string>
    <string name="strEmailWhenUpload">E-mail me when the file has been uploaded</string>
    <string name="strUploadAccessExpire">Upload access expires:</string>
    <string name="strSubject">Subject</string>
    <string name="strNote">Note</string>
    <string name="strLastThingNotice">Almost done. One last thing &#8230;</string>
    <string name="strSaveCredential">Yes, please save my credentials</string>
    <string name="strFoundZeroItem">Found 0 items.</string>
    <string name="strName">name</string>
    <string name="strSmallText">Small Text</string>
    <string name="strSendExplainNotice">Send allows you to send a file to a recipient using a hyperlink in an e-mail.</string>
    <string name="strEmailWhenDownload">E-mail me when the file has been downloaded</string>
    <string name="strDownloadAccessExpire">Download access expires:</string>
    <string name="strSendFolder">Send Folder</string>
    <string name="strSendFolderExplainNotice">Send allows you to send a folder to a recipient using a hyperlink in an e-mail.</string>
    <string name="strEmailWhenFolderDownload">E-mail me when the folder has been downloaded</string>
    <string name="strSendToWithColon">Send to:</string>
    <string name="strSendMeEmailCopy">Send me a copy of this email</string>
    <string name="strNotifyAfterEachDownload">Notify me after each download</string>
    <string name="strExpires">Expires</string>
    <string name="strButton">Button</string>
    <string name="strSelectAccount">Select An Account</string>
    <string name="strDomain">domain</string>
    <string name="strAccountName">Account Name</string>
    <string name="strConnectorsWithColon">Connectors:</string>
    <string name="strTrustConnectors">Trust Connectors</string>
    <string name="strSharefileContacts">ShareFile Contacts</string>
    <string name="strAccountSettings">Account Settings</string>
    <string name="strRememberLoginInfo">Remember my login info</string>
    <string name="strEnableOfflineFiles">Enable offline files</string>
    <string name="strPasscodeLock">Passcode Lock</string>
    <string name="strLogout">Log Out</string>
    <string name="strRemoveAccount">Remove Account</string>
    <string name="strCheckOut">Check Out</string>
    <string name="strCheckInWithNote">Check In With a Note</string>
    <string name="strDiscardCheckOut">Discard checkout</string>
    <string name="strTest">TEST</string>
    <string name="strMultiAccountAssociate">ShareFile found multiple accounts associated with that user login:</string>
    <string name="strSyncZeroFile">Syncing 0 files.</string>
    <string name="strTitleUppercase">TITLE</string>
    <string name="strStoragezoneConnWithColon">StorageZone Connector:</string>
    <string name="strTermOfUse">Terms of Use</string>
    <string name="strZeroSubFolders">0 subfolders.</string>
    <string name="strUploadToSharefile">Upload to ShareFile</string>
    <string name="strSourceWithColon">Source:</string>
    <string name="strDestWithColon">Destination:</string>
    <string name="strOverwriteOnUpload">Overwrite file on upload.</string>
    <string name="strUploadFileNameWithColon">Upload File Name:</string>
    <string name="strUploadDestWithColon">Upload Destination:</string>
    <string name="strPendingTransfers">Pending Transfers</string>
    <string name="strUploadAFile">Upload A File</string>
    <string name="strUploadCameraPhoto">Take a Photo from Camera</string>
    <string name="strUploadCameraVideo">Record Video from Camera</string>
    <string name="strUploadPhoto">Upload Photo From Gallery</string>
    <string name="strUploadVideo">Upload Video From Gallery</string>
    <string name="strUploadAnyFile">Upload Other Files</string>
    <string name="strChooseFolder">Choose Folder</string>
    <string name="strSelectFolder">Select Folder</string>
    <string name="strAbout">About</string>
    <string name="strCopyright">copyright</string>
    <string name="strVersion">version</string>
    <string name="strEUSA">EUSA</string>
    <string name="strToEmailAddrWithColon">To Email Address:</string>
    <string name="strFNameWithColon">First Name:</string>
    <string name="strLNameWithColon">Last Name:</string>
    <string name="strCompanyWithColon">Company:</string>
    <string name="strSameAsWithColon">Same as:</string>
    <string name="strCustomPermissionWithColon">Custom Permissions:</string>
    <string name="strOK">OK</string>
    <string name="strConfirmation">Confirmation</string>
    <string name="strNewFolderNameWithEllipsis">New folder name &#8230;</string>
    <string name="strDownloads">Downloads</string>
    <string name="strAutoLoginNotice">Log me in automatically</string>
    <string name="strTryForFreeNotice">Try ShareFile FREE for 30 days</string>
    <string name="strZeroResultFound">0 Results found.</string>
    <string name="strSyncFolder">Sync Folder</string>
    <string name="strFolderPref">Folder Preferences</string>
</resources>